# Axolotl_Zero

./: .CLAUDE.md  ARCHITECTURE.md  LICENSE  README.md  axelot_rfid.bundle  setup_structure.ps1  setup_structure.sh
axolotl-fw/: Cargo.toml  sdkconfig.defaults
axolotl-fw/src/: logo.rs  main.rs  nfc.rs
axolotl-fw/src/bad_usb/: mod.rs
axolotl-fw/src/drivers/: buttons.rs  mod.rs  sdcard.rs
axolotl-fw/src/nfc/: mod.rs
axolotl-fw/src/sub_ghz/: mod.rs
axolotl-fw/src/ui/: mod.rs
axolotl-fw/src/ui/screens/: mod.rs
axolotl-fw/src/wifi/: mod.rs
docs/features/: bad-usb.md  nfc-rfid.md  sub-ghz.md  wifi.md
