[package]
name = "axolotl-fw"
version = "0.1.0"
authors = ["Mathis NGO <m.ngo@myskolae.fr>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "axolotl-fw"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }

[dependencies]
log          = "0.4"
esp-idf-svc  = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
embedded-hal = "1.0"
heapless     = "0.8"
mipidsi          = "0.8"
display-interface-spi = "0.5"
embedded-graphics = "0.8"
esp-idf-hal      = { git = "https://github.com/esp-rs/esp-idf-hal.git" }
anyhow = "1.0.102"

[build-dependencies]
embuild = "0.33"
